# LeadQual

./: .dockerignore  .env.example  .gitignore  DATABASE_SCHEMA.md  Dockerfile  Lead_Intelligence_Report.xlsx  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
configs/: lead_scoring.yml
migrations/: env.py
migrations/versions/: 2026_06_04_0001-create_leads_table.py  2026_06_05_0002-lead_qualification_platform_schema.py  2026_06_05_0003-create_indiamart_leads_table.py  2026_06_11_0004-add_indiamart_lead_scoring.py  2026_06_11_0005-create_report_delivery_logs.py  2026_07_01_0006-create_report_extraction_states.py
src/: report_generator.py
src/app/: __init__.py  main.py
src/app/api/v1/: health.py  indiamart.py  lead_scoring.py  leads.py  reports.py  router.py
src/app/automation/: __init__.py
src/app/automation/indiamart/: __init__.py  __main__.py  api_client.py  config.py  extractor.py  parser.py  retry.py  settings.py
src/app/core/: config.py  logging.py
src/app/db/: session.py
src/app/delivery/: __init__.py  main.py
src/app/delivery/models/: __init__.py  delivery_log.py
src/app/dependencies/: database.py
src/app/models/: __init__.py  lead.py
src/app/reports/: __init__.py  excel_report.py
src/app/repositories/: indiamart.py  lead.py
src/app/schemas/: health.py  indiamart.py  lead.py  lead_scoring.py
src/app/services/: indiamart.py  lead.py  lead_scoring.py
tests/: test_excel_report.py  test_health_api.py  test_indiamart_api.py  test_lead_scoring.py  test_leads_api.py  test_report_delivery.py  test_reports_api.py
(+11 files in other folders)
