[project]
name = "lead-qualification-agent"
version = "0.1.0"
description = "Backend foundation for a Lead Qualification Platform."
requires-python = ">=3.11,<3.12"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.29.0",
    "fastapi>=0.111.0",
    "httpx>=0.27.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.2",
    "playwright>=1.44.0",
    "psycopg[binary]>=3.2.1",
    "pydantic-settings>=2.3.4",
    "APScheduler>=3.10.4",
    "python-telegram-bot>=21.4",
    "pyyaml>=6.0.2",
    "python-json-logger>=2.0.7",
    "sqlalchemy[asyncio]>=2.0.31",
    "uvicorn[standard]>=0.30.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.5.0",
]

[build-system]
requires = ["setuptools>=70.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src"]
